--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -7,8 +7,8 @@ body::after {
   content: "";
   background: url('../images/Light-Gradient.jpeg');
   opacity: 0.1;
-  top: 0;
-  left: 0;
+  top: 1%;
+  left: 1%;
   bottom: 0;
   right: 0;
   position: absolute;
@@ -47,4 +47,8 @@ nav a {
 
 nav a.active {
   color: #ff4b00;
+}
+
+ul {
+  line-height: 200%;
 }
