--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -7,8 +7,8 @@ body::after {
   content: "";
   background: url('../images/Light-Gradient.jpeg');
   opacity: 0.1;
-  top: 1%;
-  left: 1%;
+  top: 0;
+  left: 0;
   bottom: 0;
   right: 0;
   position: absolute;
@@ -24,6 +24,7 @@ body, input, button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 5%;
 }
 
 h1, h2 {
